<resources>
    <string name="app_name">DGTimer</string>

    <string name="searchCapsule">Search capsules here</string>

    <string name="tip1">* You can start counting from the moment you turn on the extraction lever (button).</string>
    <string name="tip2">* The white capsule is the milk capsule.</string>

    <string name="ratingDialogTitle">How was your experience with the app?</string>
    <string name="induceRate">If you have used our app well, please leave a rating on Google Play!</string>
    <string name="rate">Rate</string>
    <string name="later">Later</string>
    <string name="neverShowIt">No</string>

    <string name="settings">Settings</string>
    <string name="reset_to_default">Reset to default</string>
    <string name="current_alarm">Current notification sound</string>
    <string name="alarm_volume">Volume</string>
    <string name="amplitude">Amplitude</string>
    <string name="app_version">App version</string>
    <string name="rate_app">Rate this app</string>

    <string name="selectAlarm">Choose your notification sound.</string>
    <string name="alarm_0">Doorbell</string>
    <string name="alarm_1">Clear bell sound</string>
    <string name="alarm_2">Correct sound</string>
    <string name="alarm_3">Table clock alarm</string>
    <string name="alarm_4">Chicken</string>
    <string name="alarm_5">Cat</string>
    <string name="alarm_6">Siren</string>
    <string name="alarm_7">Railroad crossing</string>
    <string name="alarm_8">Boat horn</string>
    <string name="alarm_9">Beep</string>

    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="when_network_disconnected">If the coffee list does not appear,\n please activate the network!</string>

    <string name="latte">Milk</string>
    <string name="capsule_type_coffee">Coffee</string>
    <string name="capsule_type_green_tea">Green Tea</string>
    <string name="capsule_type_chocolate">Chocolate</string>

    <string name="widget_empty_starred_capsule_list">There is no starred capsules.</string>
</resources>